--- a/oursite/templates/base.html
+++ b/oursite/templates/base.html
@@ -1,4 +1,5 @@
-{% load static wagtailcore_tags wagtailuserbar %}
+{# Remove wagtailuserbar: #}
+{% load static wagtailcore_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,6 +24,12 @@
         <base target="_blank">
         {% endif %}
 
+        <!-- {# Add supported color schemes: #}
+        <meta name="color-scheme" content="light dark"> -->
+
+        {# Add a favicon with inline SVG: #}
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍩</text></svg>"/>
+
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/oursite.css' %}">
 
@@ -32,19 +39,20 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
-        <script src="{% static 'js/main.js' %}"></script>
-        {% wagtailuserbar %}
+        {# Remove  wagtailuserbar: #}
 
-        {# Add header template to base template: #}
         {% include "includes/header.html" %}
 
-        {% block content %}{% endblock %}
+        {# Wrap your block content  within a <main> HTML5 tag: #}
+        <main>
+            {% block content %}{% endblock %}
+        </main>
 
         {% include "includes/footer.html" %}
 
         {# Global javascript #}
 
-        <script type="text/javascript" src="{% static 'js/mysite.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/oursite.js' %}"></script>
 
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
