navbar translation fix, smtp integration, and other minor fixes

--- a/oursite/templates/includes/header.html
+++ b/oursite/templates/includes/header.html
@@ -1,10 +1,12 @@
-{% load i18n wagtailcore_tags navigation_tags wagtailuserbar menu_tags %}
+{% load i18n wagtailcore_tags wagtailuserbar menu_tags %}
 {% get_current_language as LANGUAGE_CODE %}
 
 <header>
     <nav>
-        {% main_menu ul_class="navbar-nav" %}
-        <form action="{% url 'set_language' %}" method="post" style="display:inline; margin-left:2rem;">
+        <div class="navbar-menu">
+            {% main_menu ul_class="navbar-nav" %}
+        </div>
+        <form class="navbar-lang" action="{% url 'set_language' %}" method="post" style="display:inline; margin-left:2rem;">
             {% csrf_token %}
             <select name="language" onchange="this.form.submit()">
                 <option value="en" {% if LANGUAGE_CODE == 'en' %}selected{% endif %}>English</option>
