--- a/oursite/static/css/oursite.css
+++ b/oursite/static/css/oursite.css
@@ -103,7 +103,7 @@ ul.navbar-nav > li.active > a,
 ul.menu > li.active > a,
 ul > li.active > a {
     background: #f5f5f5;
-    color: #0077cc;
+    color: #00a885;
 }
 
 /* Responsive: stack vertically on small screens */
