--- a/blog/templates/blog/blog_post_page.html
+++ b/blog/templates/blog/blog_post_page.html
@@ -65,5 +65,20 @@
 </div>
 {% endif %}
 {%endwith%}
+{% with related_posts=page.get_related_posts %}
+    {% if related_posts %}
+        <div class="related-posts">
+            <h3>Related Posts</h3>
+            <ul>
+                {% for post in related_posts %}
+                    <li>
+                        <a href="{{ post.url }}">{{ post.title }}</a>
+                        {% if post.date %}<span class="date">{{ post.date }}</span>{% endif %}
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+{% endwith %}
 </div>
 {% endblock %}
