--- a/oursite/templates/menus/main_menu.html
+++ b/oursite/templates/menus/main_menu.html
@@ -4,12 +4,6 @@
 
 <ul class="{{ menu.ul_class|default:'' }}">
     {% for item in menu_items %}
-        {% with item.link_page|get_translation:LANGUAGE_CODE as translated %}
-            {% if translated %}
-                <li><a href="{{ translated.localized.url }}">{{ item.text|default:translated.title }}</a></li>
-            {% else %}
-                <li><a href="{{ item.link_page.localized.url }}">{{ item.text|default:item.link_page.title }}</a></li>
-            {% endif %}
-        {% endwith %}
+        <li><a href="{{ item.link_page.localized.url }}">{{ item.link_page.localized.title }}</a></li>
     {% endfor %}
 </ul>
