--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -18,9 +18,9 @@
     {% for result in search_results %}
     <li>
         <h4><a href="{% pageurl result %}">{{ result }}</a></h4>
-        {% if result.search_description %}
-        {{ result.search_description }}
-        {% endif %}
+        <!-- {% if result.search_description %}
+            {{ result.search_description }}
+        {% endif %} -->
     </li>
     {% endfor %}
 </ul>
