--- a/blog/templates/blog/blog_post_page.html
+++ b/blog/templates/blog/blog_post_page.html
@@ -8,7 +8,9 @@
 
 <div class="blog-post-container">
     <h1 class="title">{{page.title}}</h1>
-
+    {% if page.featured %}
+        <span class="featured-label">Featured</span>
+    {% endif %}
 
 {% with authors=page.authors.all %}
 
@@ -39,6 +41,17 @@
 
 {%endif%}
 
+{% endwith %}
+
+{% with categories=page.categories.all %}
+{% if categories %}
+<div class="categories">
+    Categories:
+    {% for category in categories %}
+        <a href="{{ category.get_absolute_url }}">{{ category.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% endfor %}
+</div>
+{% endif %}
 {% endwith %}
 
 {% with images=page.image_gallery.all %}
